fix: collapse css

--- a/src/unicms_template_unical/static/css/unicms_unical.scss
+++ b/src/unicms_template_unical/static/css/unicms_unical.scss
@@ -387,6 +387,10 @@ a .badge-grey-unical.selected {
     width: 1.5rem;
 }
 
+.collapse-header{
+    border-color: #e3e4e6 !important;
+}
+
 .nav-tabs .nav-link,
 .nav-tabs .nav-link:hover {
     color: $light_grey_unical;
